# typstit

./: Package.swift  README.md  build-app.sh  make-icon.swift
.github/workflows/: build.yml
Resources/: AppIcon.icns
Sources/Typstit/: AppModel.swift  Color+Hex.swift  ContentView.swift  TypstitApp.swift
Sources/Typstit/Compiler/: Preamble.swift  TypstCompiler.swift
Sources/Typstit/Editor/: CodeEditorView.swift  SyntaxHighlighter.swift
Sources/Typstit/History/: HistoryEntry.swift  HistoryStore.swift  HistoryView.swift
Sources/Typstit/Preview/: DraggablePDFView.swift  PDFPreviewView.swift
qt/: CMakeLists.txt  clipboard_mac.h  clipboard_mac.mm  compiler.cpp  compiler.h  highlighter.cpp  highlighter.h  history.cpp  history.h  historywindow.cpp  historywindow.h  main.cpp  mainwindow.cpp  mainwindow.h  preamble.h  previewwidget.cpp  previewwidget.h
